upd docs and test TODO check invalid UUID
